Configured data access, automatic migrations and static image serving

--- a/Core.API/appsettings.Development.json
+++ b/Core.API/appsettings.Development.json
@@ -1,8 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "CoreDB": "Host=localhost;Database=CoreDB;Username=sa;Password=*b@Nc*5%R6X0"
   }
 }
