--- a/Identity.API/appsettings.Development.json
+++ b/Identity.API/appsettings.Development.json
@@ -1,9 +1,8 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "IdentityDB": "Host=localhost;Database=IdentityDB;Username=sa;Password=*b@Nc*5%R6X0"
   },
-  "DetailedErrors": true
+  "IdentityOptions": {
+    "PicBaseUrl": "http://localhost:5226/images"
+  }
 }
