--- a/Identity.API/appsettings.json
+++ b/Identity.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "IdentityOptions": {
+    "PicBaseUrl": "http://localhost:5226/images"
+  }
 }
