--- a/Core.API/Core.API.csproj
+++ b/Core.API/Core.API.csproj
@@ -28,6 +28,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\LetsGame.Common\LetsGame.Common.csproj" />
 		<ProjectReference Include="..\LetsGame.ServiceDefaults\LetsGame.ServiceDefaults.csproj" />
 	</ItemGroup>
 
